# wakunet-lib

./: Procfile  build  build.sh  timeline-service.cabal  timeline-service.md
src/: Clients.hs  Config.hs  Main.hs  Models.hs
src/APIs/: DiscussionAPI.hs  EventAPI.hs  RatingAPI.hs  TimelineAPI.hs  Util.hs
src/Clients/: DiscussionClient.hs  EventClient.hs  TimelineClient.hs  Util.hs
src/Models/: Discussion.hs  Event.hs  General.hs  Rating.hs  Timeline.hs
src/Servers/: Errors.hs  TimelineServer.hs  Util.hs
waku-lib/: Makefile  external-access-service.md  sticky-api.md  waku-lib.cabal  wakunet-haskell-lib.cabal
waku-lib/src/Waku/: APIs.hs  Clients.hs  Models.hs
waku-lib/src/Waku/APIs/: ChatAPI.hs  DiscussionAPI.hs  EventAPI.hs  ExternalAccessAPI.hs  GroupAPI.hs  MailAPI.hs  NotificationAPI.hs  ProfileAPI.hs  RatingAPI.hs  StickyAPI.hs  TimelineAPI.hs  UserAPI.hs  Util.hs
waku-lib/src/Waku/Clients/: ChatClient.hs  DiscussionClient.hs  EventClient.hs  ExternalAccessClient.hs  GroupClient.hs  MailClient.hs  NotificationClient.hs  ProfileClient.hs  RatingClient.hs  TimelineClient.hs  UserClient.hs  Util.hs
waku-lib/src/Waku/Models/: Chat.hs  Discussion.hs  Event.hs  ExternalAccess.hs  General.hs  Group.hs  Mail.hs  Notification.hs  Profile.hs  Rating.hs  Timeline.hs  Url.hs  User.hs
waku-lib/src/Waku/Servers/: Errors.hs  Util.hs
waku-timeline-service/: timeline-service.md  waku-timeline-service.cabal
waku-timeline-service/src/: Docs.hs  Main.hs
waku-timeline-service/src/APIs/: DiscussionAPI.hs
waku-timeline-service/src/Clients/: RatingClient.hs  Util.hs
waku-timeline-service/src/Models/: Discussion.hs  Rating.hs  Timeline.hs
waku-timeline-service/src/Servers/: TimelineServer.hs
waku-timeline-service/src/Waku/Timeline/: Server.hs
