name:                waku-lib
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              1225449
maintainer:          e1225449@student.tuwien.ac.at
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:    Waku.Clients, Waku.Models, Waku.Servers.Errors, Waku.Servers.Util, Waku.APIs.DiscussionAPI, Waku.APIs.TimelineAPI, Waku.APIs.RatingAPI, Waku.APIs.EventAPI, Waku.APIs.ExternalAccessAPI, Waku.APIs.Util, Waku.Clients.DiscussionClient, Waku.Clients.RatingClient, Waku.Clients.EventClient, Waku.Clients.Util, Waku.Clients.TimelineClient, Waku.Clients.ExternalAccessClient, Waku.Models.Rating, Waku.Models.Event, Waku.Models.Discussion, Waku.Models.General, Waku.Models.Timeline, Waku.Models.ExternalAccess
  -- other-modules:
  other-extensions:    OverloadedStrings, RecordWildCards, DataKinds, TypeOperators, TypeFamilies, FlexibleContexts, PolyKinds, FlexibleInstances, MultiParamTypeClasses, TypeSynonymInstances, DeriveGeneric, GeneralizedNewtypeDeriving, EmptyDataDecls, GADTs, QuasiQuotes, TemplateHaskell, FunctionalDependencies
  build-depends:
      base >=4.8 && <4.9
    , either >=4.4 && <4.5
    , servant-server >=0.4 && <0.5
    , servant-client >=0.4 && <0.5
    , http-types >=0.9 && <0.10
    , transformers >=0.4 && <0.5
    , servant-docs >=0.4 && <0.5
    , time >=1.5 && <1.6
    , text >=1.2 && <1.3
    , filepath >=1.4 && <1.5
    , servant >=0.4 && <0.5
    , aeson >=0.10 && <0.11
    , warp >=3.2 && <3.3
    , servant-jquery >=0.4 && <0.5
    , aeson-casing >=0.1 && <0.2
    , containers >=0.5 && <0.6
    , uuid
    , uuid-aeson
  hs-source-dirs:      src
  default-language:    Haskell2010
